--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <!-- fots -->
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
