--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
 
     <div class="col-xs-12 col-sm-4 col-md-3 personCard">
-      <img class="personPic" src="People/Park.png">
+      <img class="personPic" src="People/park.png">
       <div class="personName"> Jeongho Park </div>
       <div class="personRole">Postdoctoral fellow</div>
       <div class="personInfo">
