--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <br><br> Our broad <b>aim</b> is to understand how we see and represent the world around us. How is the human visual system organized, and what pressures guide this organization?
     How does vision interface with action demands, so we can interact in the world, and with conceptual representation, so we can learn more about the world by looking?
 
-    <br><br>My <b>approach</b> starts from the premise that the connections of the brain are driven by powerful biological
+    <br><br>Our <b>approach</b> starts from the premise that the connections of the brain are driven by powerful biological
     constraints—as such, where different kinds of information is found in the brain is not arbitrary,
-    and serves as a clue into the underlying representational goals of the system.  My research approach is
+    and serves as a clue into the underlying representational goals of the system.  Our research approach is
     inspired by considering the experience and needs of an active observer in the world—this thinking continually
-    deepens my understanding of how behavioral capacities are expectant in the local
+    deepens our understanding of how behavioral capacities are expectant in the local
     and long-range architecture of the brain, and how neural networks absorb the statistics
     of visual experience and the consequences of actions, 
     to realize the functions latent in the structure.  
