update pointer to visionlab shared folder

--- a/index.html
+++ b/index.html
@@ -950,7 +950,7 @@
       </div>
       <div class="col-sm-12 col-sm-7">
         <b>Animacy x Size "Texforms"</b><br>
-        <a class="trackLink" href="ImageSets/AnimSizeTexform.zip">
+        <a class="trackLink" data="ImageSets/AnimSizeTexform.zip" href="https://visionlab.harvard.edu/shared/AnimSizeTexform.zip">
           <br>30 small animals, 30 big animals, 30 small objects, 30 big objects
           <br> both in original and texform versions (.zip)
         </a>
@@ -982,7 +982,7 @@
       </div>
       <div class="col-sm-12 col-sm-7">
         <b>Action video clips</b><br>
-        <a class="trackLink" href="ImageSets/ActionVideos.zip">
+        <a class="trackLink" data="ImageSets/ActionVideos.zip" href="https://visionlab.harvard.edu/shared/ActionVideos.zip">
           <br>2 video sets of 60 everyday actions  (.zip)
         </a>
         <br><br><span class="formatCitation"> Tarhan & Konkle, 2020, Nature Communications.</span>
@@ -997,7 +997,7 @@
         </div>
         <div class="col-sm-12 col-sm-7">
           <b>Animacy x Size</b><br>
-          <a class="trackLink" href="ImageSets/AnimacySize.zip">
+          <a class="trackLink" data="ImageSets/AnimacySize.zip" href="https://visionlab.harvard.edu/shared/AnimacySize.zip">
             <br>60 small animals, 60 big animals,
             <br>60 small objects, 60 big objects (.zip)
           </a>
@@ -1014,7 +1014,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Reachspaces, Objects, and Scenes</b><br>
-      <a class="trackLink" href="ImageSets/ObjRSScene.zip">
+      <a class="trackLink" data="ImageSets/ObjRSScene.zip"  href="https://visionlab.harvard.edu/shared/ObjRSScene.zip">
         <br>60 objects, 60 reachspaces, 60 scenes
         <br> from 6 different semantic categories, divided into 2 sets
       </a>
@@ -1029,7 +1029,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Reachspace Probe Set</b><br>
-      <a class="trackLink" href="ImageSets/RSProbe.zip">
+      <a class="trackLink" data="ImageSets/RSProbe.zip" href="https://visionlab.harvard.edu/shared/RSProbe.zip">
         <br> 280 images to probe reachspace representation,
         <br> e.g. Reachspaces with background removed and objects in original or scrambled positions (balanced for retinotopic footprint), and more...
       </a>
@@ -1048,7 +1048,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Big and Small Objects</b><br>
-      <a class="trackLink" href="ImageSets/BigSmallObjects.zip">
+      <a class="trackLink" data="ImageSets/BigSmallObjects.zip" href="https://visionlab.harvard.edu/shared/BigSmallObjects.zip">
         <br>200 big objects, 200 small objects (.zip)
       </a>
       <br><br><span class="formatCitation"> Konkle & Oliva, 2012, Neuron.</span>
@@ -1123,7 +1123,7 @@
       </div>
       <div class="col-sm-12 col-sm-7">
         <b>8 "Classic" Categories</b><br>
-        <a class="trackLink" href="ImageSets/CompSearch.zip">
+        <a class="trackLink" data="ImageSets/CompSearch.zip" href="https://visionlab.harvard.edu/shared/CompSearch.zip">
           <br> 30 each of Bodies, Buildings, Cars, Cats,<br> Chairs, Faces, Hammers, Phones (.zip)
         </a>
         <br><br><span class="formatCitation"> Cohen et al., Journal of Neurophysiology. 2016.</span>
@@ -1137,7 +1137,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Scene Size x Clutter Database</b><br>
-      <a class="trackLink" href="ImageSets/SceneSizeClutter_Park2014CerebCtx.zip">
+      <a class="trackLink" data="ImageSets/SceneSizeClutter_Park2014CerebCtx.zip" href="https://visionlab.harvard.edu/shared/SceneSizeClutter_Park2014CerebCtx.zip">
         <br>36 Scene categories (12 exemplars each)
         <br>along 6 levels of size: small to large,
         <br>and 6 levels of clutter: empty to full (.zip)
@@ -1153,7 +1153,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Scene Categories by Size</b><br>
-      <a class="trackLink" href="ImageSets/SceneSize_Park2014CerebCtx.zip">
+      <a class="trackLink" data="ImageSets/SceneSize_Park2014CerebCtx.zip" href="https://visionlab.harvard.edu/shared/SceneSize_Park2014CerebCtx.zip">
         <br>Scene Categories by Size
         <br>18 Scene categories (16 exemplars each)
         <br>along 6 levels of size: small to large (.zip)
@@ -1170,7 +1170,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Object Size Range</b><br>
-      <a class="trackLink" href="ImageSets/OBJECT100Database.zip">
+      <a class="trackLink" data="ImageSets/OBJECT100Database.zip" href="https://visionlab.harvard.edu/shared/OBJECT100Database.zip">
         <br>100 objects ranging in real-world size
         <br>with corresponding size ranks (.zip)
       </a>
@@ -1205,7 +1205,7 @@
     </div>
     <div class="col-sm-12 col-sm-7">
       <b>Object Size Stroop</b><br>
-      <a class="trackLink" href="ImageSets/SizeStroop_SampleDisplays.zip">
+      <a class="trackLink" data="ImageSets/SizeStroop_SampleDisplays.zip" href="https://visionlab.harvard.edu/shared/SizeStroop_SampleDisplays.zip">
         <br>Sample congruent and incongruent displays from two experiments (.zip)
       </a>
       <br><br><span class="formatCitation"> Konkle & Oliva, 2012, JEP:HPP.</span>
